fix: remove overflow

--- a/frontend/src/components/UI/Back/back.css
+++ b/frontend/src/components/UI/Back/back.css
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: flex-start;
   padding: 1rem;
+  overflow: hidden;
+  width: 80%;
 }
 
 .back-btn {
