--- a/frontend/src/pages/main/main.css
+++ b/frontend/src/pages/main/main.css
@@ -1,9 +1,10 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  width: 100vw;
+  justify-content: flex-end;
+  width: 100%;
   height: 100vh;
+  /* padding: 1rem 0; */
 }
 
 .tracker {
@@ -13,7 +14,7 @@
   gap: 5rem;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .percent {
