--- a/frontend/src/pages/setup/setup.css
+++ b/frontend/src/pages/setup/setup.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
 }
 
 form {
@@ -9,4 +10,5 @@ form {
   flex-direction: column;
   gap: 2rem;
   width: 60%;
+  padding: 0 0 3em 0;
 }
