--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -2,8 +2,6 @@ html {
     background-color: rgba(0, 0, 0, 0.8);
     text-align: center;
     color: white;
-    height: 100vh;
-    overflow: hidden;
 }
 
 body {
@@ -11,7 +9,8 @@ body {
     margin: 0;
     color: white;
     font-family: 'Yanone', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 100vh;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 @font-face {
